[package]
name = "pyenr"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
enr = { version = "0.13", features = ["serde", "ed25519"] }
k256 = "0.13"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
alloy-rlp = "0.3"
