[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyenr"
version = "0.1.0"
description = "Python library for Ethereum Node Records (ENR, EIP-778)"
requires-python = ">=3.9,<=3.14"

[tool.maturin]
python-source = "python"
module-name = "pyenr._core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["pytest>=7", "maturin>=1.0"]
